# Practica3VisionPorComputador

./: .gitignore
App/: settings.gradle.kts
App/app/: build.gradle.kts
App/app/src/main/: AndroidManifest.xml
App/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  shape_signature.cpp  shape_signature.h
App/app/src/main/java/com/example/appandroid/: DrawingView.kt  MainActivity.kt  NativeLib.kt
App/app/src/main/res/layout/: activity_main.xml
App/gradle/wrapper/: gradle-wrapper.properties
App/sdk/: build.gradle
KNN_Procesamieto/: ProcesamientoIMG.ipynb
PruebasDFT/: Makefile  ania.cpp  ania.h  descriptores.txt  main.cpp
